--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,11 +4,8 @@
 <title><%= full_title(yield(:title).capitalize) %></title>
 </head>
 <p>
-The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
-Tutorial</em></a> is a
-<a href="http://www.railstutorial.org/book">book</a> and
+This application is a simple way to learn rails, following the
+</em></a> <a href="http://www.railstutorial.org/book">tutorial</a> and
 <a href="http://screencasts.railstutorial.org/">screencast series</a>
-to teach web development with
-<a href="http://rubyonrails.org/">Ruby on Rails</a>.
-This is the sample application for the tutorial.
+that should help me become a middle backend developer.
 </p>
