--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,11 @@
 <% provide(:title, "Home") %>
-<h1><%= yield(:title).upcase %></h1>
-<head>
 <title><%= full_title(yield(:title).capitalize) %></title>
-</head>
-<p>This is the home page for the
-<a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-sample application.</p>
+
+<div class="center jumbotron">
+  <h1><%= yield(:title).upcase %></h1>
+  <h2><p>This is the home page for my Objective Key Results rails progect</p></h2>
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails-logo.svg", alt: "Rails logo", size: 100),
+'http://rubyonrails.org/' %>
