--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
 <div class="center jumbotron">
   <h1><%= yield(:title).upcase %></h1>
   <h2><p>This is the home page for my Objective Key Results rails progect</p></h2>
-  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails-logo.svg", alt: "Rails logo", size: 100),
